--- a/k8s/pingpong-deployment.yaml
+++ b/k8s/pingpong-deployment.yaml
@@ -17,4 +17,17 @@ spec:
           image: elirazo/pingpong-app
           ports:
             - containerPort: 5005
-
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: pingpong-service
+spec:
+  type: NodePort	
+  selector:
+    app: pingpong
+  ports:
+    - protocol: TCP
+      port: 5005
+      targetPort: 5005
+  
