--- a/ansible/ScaleDown_replicas.yaml
+++ b/ansible/ScaleDown_replicas.yaml
@@ -1,10 +1,8 @@
-- name: Scale Kubernetes resources
-  hosts: kubernetes
-  tasks:
-    - name: Perform scaling
-      k8s_scale:
-        name: <resource_name>
-        state: <desired_state>
-        replicas: <desired_replicas>
+---
+- name: Scale down Kubernetes deployment
+  hosts: localhost
+  gather_facts: false
 
-  
+  tasks:
+    - name: Scale down deployment
+      command: kubectl scale deployment pingpong-deployment --replicas=2
