--- a/ansible/ScaleDown_replicas.yaml
+++ b/ansible/ScaleDown_replicas.yaml
@@ -5,4 +5,5 @@
 
   tasks:
     - name: Scale down deployment
+      kubeconfig: '~/.kube/config'
       command: kubectl scale deployment pingpong-deployment --replicas=2
