--- a/k8s/pingpong-deployment.yaml
+++ b/k8s/pingpong-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: pingpong-deployment
+  namespace: pingpong-ns
 spec:
   replicas: 4
   selector:
@@ -22,6 +23,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: pingpong-service
+  namespace: pingpong-ns
 spec:
   type: NodePort
   selector:
@@ -31,4 +33,3 @@ spec:
       port: 5005
       targetPort: 5005
       nodePort: 30005
-
