--- a/ansible/ScaleDown_replicas.yaml
+++ b/ansible/ScaleDown_replicas.yaml
@@ -5,4 +5,4 @@
 
   tasks:
     - name: Scale down deployment
-      command: kubectl scale deployment pingpong-deployment --replicas=2
+      command: /usr/local/bin/kubectl scale deployment pingpong-deployment --replicas=2
